--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -114,11 +114,11 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            await github.rest.issues.addAssignees({
+            await github.rest.issues.addLabels({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              assignees: ['claude']
+              labels: ['claude']
             });
 
             console.log('Assigned Claude for code analysis');
